feat(domain): add get my l3 domains method
