# domain-service/src/main/java/ru/itmo/domain/controller/UserDomainApiController.java
@@ -16,6 +16,12 @@ public class UserDomainApiController implements UserDomainApi {
     private final UserDomainService userDomainService;
 
     @Override
+    public ResponseEntity<List<String>> getUserDomains() {
+        List<String> domains = userDomainService.getUserDomains();
+        return ResponseEntity.ok(domains);
+    }
+
+    @Override
     public ResponseEntity<List<String>> createUserDomains(List<String> l3Domains) {
         List<String> createdDomains = userDomainService.createUserDomains(l3Domains);
         return ResponseEntity.status(201).body(createdDomains);
