# domain-service/src/main/java/ru/itmo/domain/service/UserDomainService.java
@@ -4,5 +4,7 @@ import java.util.List;
 
 public interface UserDomainService {
 
+    List<String> getUserDomains();
+
     List<String> createUserDomains(List<String> l3Domains);
 }
